--- a/data/projects.json
+++ b/data/projects.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/user/Project1",
     "forks_count": 28,
     "stars_count": 239,
-    "icon": "",
+    "icon_class": "mdi-file-cloud-done",
     "description": "A description of Project1"
   },
   {
@@ -19,7 +19,7 @@
     "url": "https://github.com/user/Project2",
     "forks_count": 2,
     "stars_count": 19,
-    "icon": "",
+    "icon_class": "mdi-hardware-security",
     "description": "A description of Project2"
   },
   {
@@ -30,7 +30,7 @@
     "url": "https://github.com/user/Project3",
     "forks_count": 3,
     "stars_count": 11,
-    "icon": "",
+    "icon_class": "mdi-image-camera",
     "description": "A description of Project3"
   },
   {
@@ -41,7 +41,7 @@
     "url": "https://github.com/user/Project4",
     "forks_count": 28,
     "stars_count": 239,
-    "icon": "",
+    "icon_class": "mdi-maps-location-history",
     "description": "A description of Project4"
   },
   {
@@ -52,7 +52,7 @@
     "url": "https://github.com/user/Project5",
     "forks_count": 2,
     "stars_count": 19,
-    "icon": "",
+    "icon_class": "mdi-maps-local-cafe",
     "description": "A description of Project5"
   },
   {
@@ -63,7 +63,7 @@
     "url": "https://github.com/user/Project6",
     "forks_count": 3,
     "stars_count": 11,
-    "icon": "",
+    "icon_class": "mdi-device-access-alarm",
     "description": "A description of Project6"
   },
   {
@@ -76,7 +76,7 @@
     "url": "https://github.com/user/Project7",
     "forks_count": 28,
     "stars_count": 239,
-    "icon": "",
+    "icon_class": "mdi-device-brightness-high",
     "description": "A description of Project7"
   },
   {
@@ -87,7 +87,7 @@
     "url": "https://github.com/user/Project8",
     "forks_count": 2,
     "stars_count": 19,
-    "icon": "",
+    "icon_class": "mdi-editor-insert-photo",
     "description": "A description of Project8"
   },
   {
@@ -98,7 +98,7 @@
     "url": "https://github.com/user/Project9",
     "forks_count": 3,
     "stars_count": 11,
-    "icon": "",
+    "icon_class": "mdi-maps-local-attraction",
     "description": "A description of Project9"
   }
 ]
